--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pytest = "*"
-pytest-cov = "*"
-pandas = "*"
 
 [packages]
+pandas = "*"
 tweepy = "*"
-pyspark = "*"
+kafka-python = "*"
+pyspark = "==2.4.5"
 
 [requires]
 python_version = "3.7"
