--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ pandas = "*"
 tweepy = "*"
 kafka-python = "*"
 pyspark = "==2.4.5"
+bson = "*"
+pymongo = "*"
+pykafka = "*"
 
 [requires]
 python_version = "3.7"
