--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,9 @@ verify_ssl = true
 [packages]
 pandas = "*"
 tweepy = "*"
-kafka-python = "*"
 pyspark = "==2.4.5"
 pykafka = "*"
+elasticsearch = "*"
 
 [requires]
 python_version = "3.7"
